--- a/kong-images/build.yml
+++ b/kong-images/build.yml
@@ -2,26 +2,26 @@ bumper:
     name: bumper-ee
     key_name: bumper-ee
     repo_name: bumper-ee
-    github_url: git@github.com:jeremymv2/bumper-ee.git
+    github_url: git@github.com:Kong/bumper-ee.git
     version: next/2.4.x.x
 enterprise:
   - name: bumper-plugin
     key_name: bumper-plugin
     repo_name: bumper
-    github_url: git@github.com:jeremymv2/bumper.git
+    github_url: git@github.com:Kong/bumper.git
     version: 4.0.0
   - name: bumper2-plugin
     key_name: bumper2-plugin
     repo_name: bumper2
-    github_url: git@github.com:jeremymv2/bumper2.git
+    github_url: git@github.com:Kong/bumper2.git
     version: 0.2.0
   - name: some-other-plugin
     key_name: other-plugin
     repo_name: other-plugin
-    github_url: git@github.com:jeremymv2/other.git
+    github_url: git@github.com:Kong/other.git
     version: 1.2.3
   - name: bumper3-plugin
     key_name: bumper3-plugin
     repo_name: bumper3
-    github_url: git@github.com:jeremymv2/bumper3.git
+    github_url: git@github.com:Kong/bumper3.git
     version: 0.38.1
